# patchAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analyze_ic1_fi_curves.py  patchAgent.code-workspace  pyproject.toml  pyvenv.cfg  requirements.txt
.claude/agents/: analysis-planner.md  code-reviewer.md  data-qc.md  passive-analyst.md  qc-checker.md  report-writer.md  rigor-reviewer.md  spike-analyst.md
.copilot/skills/curve_fitting/: SKILL.md
.copilot/skills/passive_properties/: SKILL.md
.copilot/skills/quality_control/: SKILL.md
.copilot/skills/spike_analysis/: SKILL.md
.github/agents/: analysis-planner.agent.md  code-reviewer.agent.md  data-qc.agent.md  passive-analyst.agent.md  qc-checker.agent.md  report-writer.agent.md  rigor-reviewer.agent.md  spike-analyst.agent.md
.github/instructions/: sciagent-rigor.instructions.md
blog/: 00-one-page_summary.md  01-what-is-patch-clamp.md  01-why-patch-agent.md  02-what-is-patch-clamp.md  02-why-patch-agent.md  03-example-walkthrough.ipynb  04-guardrails.md  05-architecture.md  vscode-copilot-setup.md
data/sample_abfs/: .gitkeep
docs/: Agents.md  IPFX.md  Operations.md  Protocol.md  Skills.md  Tools.md
examples/: fi_curve_analysis.py  passive_properties.py  spike_analysis.py
mcp/: mcp_config.json  mcp_server.py
output/: create_summary_plot.py  epsp_decay_results.csv
protocols/: IC1.yaml  gap_free.yaml  hyperpolarizing_steps.yaml  known_datasets.yaml  long_square.yaml  ramp.yaml  short_square.yaml  voltage_clamp_step.yaml
src/patch_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py
src/patch_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/patch_agent/loadFile/: __init__.py  loadABF.py  loadNWB.py  loadNWB_backup.py
src/patch_agent/prompts/: system_messages.py
src/patch_agent/tools/: __init__.py  code_tools.py  fitting_tools.py  io_tools.py  passive_tools.py  qc_tools.py  spike_tools.py
src/patch_agent/utils/: __init__.py  data_resolver.py  nan_utils.py  protocol_loader.py
src/patch_agent/web/: app.py  figure_queue.py
src/patch_agent/web/static/css/: style.css
src/patch_agent/web/static/js/: chat.js
src/patch_agent/web/templates/: index.html
src/patchagent/: __main__.py  agent.py  cli.py  config.py  constants.py
src/patchagent/loadFile/: __init__.py  loadNWB.py
src/patchagent/prompts/: __init__.py  system_messages.py
src/patchagent/tools/: __init__.py  code_tools.py  fitting_tools.py  io_tools.py  passive_tools.py  qc_tools.py  spike_tools.py
src/patchagent/utils/: __init__.py  data_resolver.py  protocol_loader.py
src/patchagent/web/: __init__.py  app.py
tests/: _check_schema_drift.py  test_new_features.py  test_protocol_loader.py  test_system_prompt.py
