[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-agent"
version = "0.1.0"
description = "A scientific analysis agent for patch-clamp electrophysiology"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sam"}
]
keywords = [
    "electrophysiology",
    "patch-clamp",
    "neuroscience",
    "analysis",
    "agent",
    "copilot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "pyabf>=2.3",
    "ipfx>=1.0",
    "h5py>=3.0",
    "copilot",  # GitHub Copilot SDK
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
cli = [
    "typer[all]>=0.9",
    "prompt-toolkit>=3.0",
    "Pillow>=9.0",
]
web = [
    "quart>=0.19",
    "quart-cors>=0.7",
]

[project.scripts]
patchagent = "patch_agent.cli:app"
patchagent-web = "patch_agent.web.app:main"

[project.urls]
Homepage = "https://github.com/smestern/patchAgent"
Repository = "https://github.com/smestern/patchAgent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
