[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patch-agent"
version = "0.1.0"
description = "A scientific analysis agent for patch-clamp electrophysiology"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sam"}
]
keywords = [
    "electrophysiology",
    "patch-clamp",
    "neuroscience",
    "analysis",
    "agent",
    "copilot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

dependencies = [
    "sciagent>=0.1.0",         # generic scientific agent framework
    "pyabf>=2.3",
    "ipfx>=1.0",
    "pynwb>=2.5",
    "h5py>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
]
cli = [
    "sciagent[cli]",
]
web = [
    "sciagent[web]",
]
remote = [
    "lindi",  # Remote NWB / DANDI loading support
]

[project.scripts]
patchagent = "patch_agent.cli:app"
patchagent-web = "patch_agent.web.app:main"

[project.urls]
Homepage = "https://github.com/smestern/patchAgent"
Repository = "https://github.com/smestern/patchAgent"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]
